--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jytech",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,8 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "@nextui-org/react": "^2.4.2",
+    "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -18,11 +19,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "gh-pages": "^6.1.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
