--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "cors": "^2.8.5",
     "framer-motion": "^11.2.12",
+    "jsdom": "^24.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
