--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsdom": "^24.1.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
