--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@vercel/analytics": "^1.3.1",
     "cors": "^2.8.5",
     "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
