--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.13",
     "@nextui-org/react": "^2.4.2",
+    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
     "cors": "^2.8.5",
     "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
     "next": "14.2.3",
+    "next-mdx-remote": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
