--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
-    "deploy": "npm run build && gh-pages -d out"
+    "deploy": "bun run build && gh-pages -d out"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
