use server render markdown file

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/mdx": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.13",
     "@nextui-org/react": "^2.4.2",
@@ -19,14 +20,17 @@
     "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
     "next": "14.2.3",
+    "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
     "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
+    "remark-mdx-frontmatter": "^5.0.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
