--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
+    "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
