--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
