--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@nextui-org/react": "^2.4.2",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/node": "^5.1.14",
     "cors": "^2.8.5",
     "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
+    "lucide-react": "^0.484.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
-    "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
+    "openai": "^4.89.1",
     "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "remark-mdx-frontmatter": "^5.0.0",
     "styled-components": "^6.1.12"
