--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "include": ["global.d.ts","next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/pricing/page.jsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/app/api"]
 }
