--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jytech",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -28,6 +28,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-markdown": "^9.1.0",
     "remark": "^15.0.1",
