--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/node": "^5.1.14",
     "cors": "^2.8.5",
-    "framer-motion": "^11.2.12",
     "jsdom": "^24.1.0",
     "lucide-react": "^0.484.0",
     "negotiator": "^0.6.3",
@@ -39,15 +38,16 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5"
   }
 }
