--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.484.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "next-intl": "^4.5.8",
     "next-mdx-remote": "^5.0.0",
     "openai": "^4.89.1",
     "raw-loader": "^4.0.2",
@@ -38,7 +39,6 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -47,7 +47,7 @@
     "eslint-config-next": "14.2.3",
     "gh-pages": "^6.1.1",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
