--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deploy": "bun run build && gh-pages -d out"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^3.0.0",
+    "@ai-sdk/react": "^3.0.106",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/mdx": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
@@ -17,15 +19,14 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/node": "^5.1.14",
+    "ai": "^6.0.0",
     "cors": "^2.8.5",
     "jsdom": "^24.1.0",
     "lucide-react": "^0.484.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-intl": "^4.5.8",
-    "next-mdx-remote": "^5.0.0",
-    "openai": "^4.89.1",
-    "raw-loader": "^4.0.2",
+    "next-mdx-remote": "^6.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
