--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/mdx": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.13",
+    "@next/third-parties": "^16.1.6",
     "@nextui-org/react": "^2.4.2",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
